--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "test": "eslint src/index.js",
     "fix": "eslint src/index.js --fix",
     "clean": "rm -f -r dist",
-    "build-dev": "webpack -d --mode development",
-    "build-prod": "webpack -p",
-    "start": "webpack-dev-server --open --hot --mode development"
+    "build": "webpack",
+    "start": "webpack-serve"
   },
   "repository": {
     "type": "git",
@@ -22,6 +21,9 @@
   },
   "homepage": "https://github.com/yuliagushcha/extbel#readme",
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.3.0",
     "error-overlay-webpack-plugin": "^1.0.0",
     "eslint": "^7.32.0",
@@ -32,14 +34,17 @@
     "eslint-plugin-prettier": "^4.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^6.2.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^0.9.0",
     "node": "^16.10.0",
     "sass": "^1.42.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.3.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.57.0",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.3.1"
+    "webpack-serve": "^4.0.0"
   },
   "dependencies": {}
 }
